# pixelpipe

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  INSTALL  LICENSE  LICENSE.tmp  README  README.md
cmake/modules/: CMakeForceCompiler.cmake  FindOpenCL.cmake  UseDoxygen.cmake
docs/: Doxyfile.in  styles.css
docs/pages/: mainpage.dox
include/core/: appwindow.h  camera.h  clipper.h  common.h  fragment.h  framebuffer.h  geometry.h  glutwindow.h  pipeline.h  pipeline_opengl.h  pipeline_software.h  pixelpipe.h  pointlight.h  rasterizer.h  scene.h  state.h  texture.h  vertex.h
include/fragment/: frag_color.h  frag_phong.h  frag_processor.h  frag_textured.h  frag_textured_phong.h  frag_zbuffer.h
include/logger/: logger.h  logwriter.h  stdiowriter.h  syslogwriter.h
include/vertex/: vert_color.h  vert_frag_shaded.h  vert_frag_textured.h  vert_processor.h  vert_shaded.h  vert_shaded_processor.h  vert_textured_shaded.h
lib/: libcg_image.dylib  libcg_vecmath.dylib
resources/: example.xml
resources/textures/: carbonite.tif  silverblob.tif
src/: CMakeLists.txt
src/core/: appwindow.cpp  camera.cpp  clipper.cpp  framebuffer.cpp  glutwindow.cpp  main.cpp  pipeline.cpp  pipeline_opengl.cpp  pipeline_software.cpp  pixelpipe.cpp  rasterizer.cpp  state.cpp  texture.cpp
src/fragment/: frag_color.cpp  frag_phong.cpp  frag_textured.cpp  frag_textured_phong.cpp  frag_zbuffer.cpp
src/logger/: logger.cpp  logwriter.cpp  stdiowriter.cpp  syslogwriter.cpp
src/tinyxml/: CMakeLists.txt
src/vertex/: vert_color.cpp  vert_frag_shaded.cpp  vert_frag_textured.cpp  vert_processor.cpp  vert_shaded.cpp  vert_shaded_processor.cpp  vert_textured_shaded.cpp
tests/: CMakeLists.txt  image.cpp  threads.cpp  windowing.c
tests/openCL/: CMakeLists.txt  example.cl  main.c
